# turtlebot_arm

turtlebot_arm_block_manipulation/demo/: block_manipulation_demo.launch
turtlebot_arm_block_manipulation/src/: block_detection_action_server.cpp  interactive_manipulation_action_server.cpp
turtlebot_arm_bringup/scripts/: fake_joint_pub.py
turtlebot_arm_description/urdf/: arm_hardware.xacro  turtlebot_arm.urdf  turtlebot_arm.xacro  turtlebot_gripper.xacro
turtlebot_arm_ikfast_plugin/: CMakeLists.txt  README.md  package.xml  turtlebot_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
turtlebot_arm_ikfast_plugin/src/: turtlebot_arm_arm_ikfast_moveit_plugin.cpp  turtlebot_arm_arm_ikfast_solver.cpp
turtlebot_arm_moveit_config/: .setup_assistant  package.xml
turtlebot_arm_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  turtlebot_arm.srdf
turtlebot_arm_moveit_config/launch/: demo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  turtlebot_arm_moveit.launch
